--- a/TCCMadeireira/Docs/TODO.txt
+++ b/TCCMadeireira/Docs/TODO.txt
@@ -1,7 +1,14 @@
-<Frm>
-<li>FrmUsuario</li>
-<li>FrmFornecedor</li>
-<li>FrmProduto</li>
-<li>FrmFornecimento</li>
-<li>FrmVenda</li>
-</Frm>
+<Frms>
+<Frm>FrmUsuario</Frm>
+<Frm>FrmFornecedor</Frm>
+<Frm>FrmProduto</Frm>
+<Frm>FrmFornecimento</Frm>
+<Frm>FrmVenda</Frm>
+</Frms>
+<Models>
+<Model>Usuario</Model>
+<Model>Fornecedor</Model>
+<Model>Produto</Model>
+<Model>Fornecimento</Model>
+<Model>Venda</Model>
+</Models>
